--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,15 @@
     "postCreateCommand": "bash ./.devcontainer/startup.sh",
     "customizations": {
         "vscode": {
+            "extensions": [
+                "esbenp.prettier-vscode",
+                "hediet.vscode-drawio",
+                "oderwat.indent-rainbow",
+                "PKief.material-icon-theme",
+                "sohamkamani.code-eol",
+                "GitHub.copilot",
+                "ritwickdey.LiveServer"
+            ],
             "settings": {
                 "editor.autoClosingQuotes": "always",
                 "editor.bracketPairColorization.enabled": true,
